删除privilege冗余接口，并更新文档
