# docs/swagger.yaml
@@ -53,13 +53,6 @@ definitions:
       error:
         type: string
     type: object
-  curd.ReplyData-model_Privilege:
-    properties:
-      data:
-        $ref: '#/definitions/model.Privilege'
-      error:
-        type: string
-    type: object
   curd.ReplyData-model_Product:
     properties:
       data:
@@ -137,17 +130,6 @@ definitions:
       data:
         items:
           $ref: '#/definitions/model.Plugin'
-        type: array
-      error:
-        type: string
-      total:
-        type: integer
-    type: object
-  curd.ReplyList-model_Privilege:
-    properties:
-      data:
-        items:
-          $ref: '#/definitions/model.Privilege'
         type: array
       error:
         type: string
@@ -382,15 +364,6 @@ definitions:
       version:
         type: string
     type: object
-  model.Privilege:
-    properties:
-      desc:
-        type: string
-      id:
-        type: string
-      name:
-        type: string
-    type: object
   model.Product:
     properties:
       constraints:
@@ -579,6 +552,26 @@ paths:
       tags:
       - alarm
   /broker/{id}:
+    get:
+      consumes:
+      - application/json
+      description: 获取总线
+      parameters:
+      - description: 总线ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/curd.ReplyData-model_Broker'
+      summary: 获取总线
+      tags:
+      - broker
     post:
       consumes:
       - application/json
@@ -735,6 +728,26 @@ paths:
       tags:
       - broker
   /device/{id}:
+    get:
+      consumes:
+      - application/json
+      description: 获取设备
+      parameters:
+      - description: 设备ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/curd.ReplyData-model_Device'
+      summary: 获取设备
+      tags:
+      - device
     post:
       consumes:
       - application/json
@@ -891,6 +904,26 @@ paths:
       tags:
       - device
   /group/{id}:
+    get:
+      consumes:
+      - application/json
+      description: 获取分组
+      parameters:
+      - description: 分组ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/curd.ReplyData-model_Group'
+      summary: 获取分组
+      tags:
+      - group
     post:
       consumes:
       - application/json
@@ -1160,121 +1193,44 @@ paths:
       summary: 查询插件
       tags:
       - plugin
-  /privilege/{id}:
-    post:
-      consumes:
-      - application/json
-      description: 修改权限
-      parameters:
-      - description: 权限ID
-        in: path
-        name: id
-        required: true
-        type: string
-      - description: 权限信息
-        in: body
-        name: privilege
-        required: true
-        schema:
-          $ref: '#/definitions/model.Privilege'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/curd.ReplyData-model_Privilege'
-      summary: 修改权限
-      tags:
-      - privilege
-  /privilege/{id}/delete:
+  /privileges:
     get:
       consumes:
       - application/json
-      description: 删除权限
-      parameters:
-      - description: 权限ID
-        in: path
-        name: id
-        required: true
-        type: string
+      description: 查询所有权限
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/curd.ReplyData-model_Privilege'
-      summary: 删除权限
-      tags:
-      - privilege
-  /privilege/create:
-    post:
-      consumes:
-      - application/json
-      description: 创建权限
-      parameters:
-      - description: 权限信息
-        in: body
-        name: search
-        required: true
-        schema:
-          $ref: '#/definitions/model.Privilege'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/curd.ReplyData-model_Privilege'
-      summary: 创建权限
-      tags:
-      - privilege
-  /privilege/list:
-    get:
-      consumes:
-      - application/json
-      description: 查询权限
-      parameters:
-      - in: query
-        name: limit
-        type: integer
-      - in: query
-        name: skip
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/curd.ReplyList-model_Privilege'
-      summary: 查询权限
-      tags:
-      - privilege
-  /privilege/search:
-    post:
-      consumes:
-      - application/json
-      description: 这里写描述 get privileges
-      parameters:
-      - description: 查询参数
-        in: body
-        name: search
-        required: true
-        schema:
-          $ref: '#/definitions/curd.ParamSearch'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/curd.ReplyList-model_Privilege'
-      summary: 查询权限
+            additionalProperties:
+              type: string
+            type: object
+      summary: 查询所有权限
       tags:
       - privilege
   /product/{id}:
+    get:
+      consumes:
+      - application/json
+      description: 获取产品
+      parameters:
+      - description: 产品ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/curd.ReplyData-model_Product'
+      summary: 获取产品
+      tags:
+      - product
     post:
       consumes:
       - application/json
@@ -1389,6 +1345,26 @@ paths:
       tags:
       - product
   /role/{id}:
+    get:
+      consumes:
+      - application/json
+      description: 获取角色
+      parameters:
+      - description: 角色ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/curd.ReplyData-model_Role'
+      summary: 获取角色
+      tags:
+      - role
     post:
       consumes:
       - application/json
@@ -1503,6 +1479,26 @@ paths:
       tags:
       - role
   /user/{id}:
+    get:
+      consumes:
+      - application/json
+      description: 获取用户
+      parameters:
+      - description: 用户ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/curd.ReplyData-model_User'
+      summary: 获取用户
+      tags:
+      - user
     post:
       consumes:
       - application/json
